--- a/example/lapack_to_chameleon/CMakeLists.txt
+++ b/example/lapack_to_chameleon/CMakeLists.txt
@@ -18,11 +18,29 @@
 #  @date 2020-03-03
 #
 ###
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-# compilation for other sources step1 and >
-set(LTM_SOURCES
+# sources depending on CBLAS/LAPACKE
+set(LAPACK_SOURCES
+    step0.c
+   )
+foreach(_src ${LAPACK_SOURCES})
+    get_filename_component(_name_exe ${_src} NAME_WE)
+    add_executable(${_name_exe} ${_src})
+    target_link_libraries(${_name_exe} PRIVATE
+      MORSE::LAPACKE
+      MORSE::CBLAS)
+    install(TARGETS ${_name_exe}
+            DESTINATION bin/chameleon/lapack_to_chameleon)
+    # for chameleon/include/chameleon/timer.h
+    target_include_directories(${_name_exe} PRIVATE
+      ${CHAMELEON_SOURCE_DIR}/include)
+    # for chameleon/coreblas/include/coreblas/cblas.h
+    target_include_directories(${_name_exe} PRIVATE
+      ${CHAMELEON_SOURCE_DIR}/coreblas/include)
+endforeach()
+
+# sources depending on chameleon
+set(CHAMELEON_SOURCES
     step1.c
     step2.c
     step3.c
@@ -30,45 +48,25 @@ set(LTM_SOURCES
     step5.c
     step6.c
     step7.c
-   )
+)
 
-# Define what libraries we have to link with
-# ------------------------------------------
-unset(libs_for_ltm)
-list(APPEND libs_for_ltm chameleon)
-# message(STATUS "libs_for_ltm: ${libs_for_ltm}")
-
-# specific compilation for step0 because we potentially want to use
-# multithreaded BLAS and LAPACK libraries for this step
-unset(libs_for_step0)
-if (BLAS_LIBRARIES_PAR)
-  # Intel MKL multithreaded
-  list(APPEND libs_for_step0
-    ${BLAS_LIBRARIES_PAR}
-    )
-else()
-  # Any other blas/lapack suite
-  list(APPEND libs_for_step0
-    ${LAPACKE_LIBRARIES_DEP}
-    ${CBLAS_LIBRARIES_DEP}
-    )
-endif()
-# message(STATUS "libs_for_step0: ${libs_for_step0}")
-
-foreach(_ltm ${LTM_SOURCES})
-    get_filename_component(_name_exe ${_ltm} NAME_WE)
-    add_executable(${_name_exe} ${_ltm})
-    set_property(TARGET ${_name_exe} PROPERTY LINKER_LANGUAGE Fortran)
-    target_link_libraries(${_name_exe} ${libs_for_ltm})
+foreach(_src ${CHAMELEON_SOURCES})
+    get_filename_component(_name_exe ${_src} NAME_WE)
+    add_executable(${_name_exe} ${_src})
+    target_link_libraries(${_name_exe} PRIVATE
+      chameleon
+      coreblas
+      MORSE::LAPACKE)
+    # for chameleon/include/chameleon/timer.h
+    target_include_directories(${_name_exe} PRIVATE
+      ${CHAMELEON_SOURCE_DIR}/include)
+    # for chameleon/coreblas/include/coreblas/cblas.h
+    target_include_directories(${_name_exe} PRIVATE
+      ${CHAMELEON_SOURCE_DIR}/coreblas/include
+      ${CHAMELEON_BINARY_DIR}/coreblas/include)
     install(TARGETS ${_name_exe}
             DESTINATION bin/chameleon/lapack_to_chameleon)
 endforeach()
-
-add_executable(step0 step0.c)
-set_property(TARGET step0 PROPERTY LINKER_LANGUAGE Fortran)
-target_link_libraries(step0 ${libs_for_step0})
-install(TARGETS step0
-        DESTINATION bin/chameleon/lapack_to_chameleon)
 
 #-------- Tests ---------
 include(CTestLists.cmake)
