--- a/example/link_chameleon/CMakeLists.txt
+++ b/example/link_chameleon/CMakeLists.txt
@@ -21,56 +21,16 @@
 #  @date 2020-03-03
 #
 ###
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.1)
 project(LINK_CHAMELEON Fortran C CXX)
 
-# Add extra cmake module path and initialize chameleon cmake modules
-# --------------------------------------------------------------
-set( CHAMELEON_DISTRIB_DIR "" CACHE PATH "Directory of CHAMELEON distribution")
-option( CHAMELEON_CHAMELEON_USE_QUARK "CHAMELEON to be linked with QUARK runtime" OFF)
-option( CHAMELEON_CHAMELEON_USE_STARPU "CHAMELEON to be linked with StarPU runtime (default)" ON)
+find_package(CHAMELEON)
 
-# Both options cannot be ON at the same time: it is either QUARK or StarPU
-if (CHAMELEON_CHAMELEON_USE_QUARK)
-    set(CHAMELEON_CHAMELEON_USE_STARPU OFF)
-elseif (CHAMELEON_CHAMELEON_USE_STARPU)
-    set(CHAMELEON_CHAMELEON_USE_QUARK OFF)
-endif()
+add_executable(link_chameleon_c link_chameleon.c)
+target_link_libraries(link_chameleon_c PRIVATE MORSE::CHAMELEON)
 
-if (CHAMELEON_DISTRIB_DIR)
-    set( CHAMELEON_CMAKE_MODULE_DIR "${CHAMELEON_DISTRIB_DIR}/morse_cmake/modules" CACHE PATH
-         "Directory where to find CHAMELEON CMake modules (morse_cmake/modules)")
-    list(APPEND CMAKE_MODULE_PATH "${CHAMELEON_CMAKE_MODULE_DIR}")
-    list(APPEND CMAKE_MODULE_PATH "${CHAMELEON_CMAKE_MODULE_DIR}/find")
-    message(STATUS "CHAMELEON_CMAKE_MODULE_DIR : ${CHAMELEON_CMAKE_MODULE_DIR}/morse_cmake/modules")
-    include(ChamInit)
-
-    # Detect CHAMELEON
-    if (CHAMELEON_CHAMELEON_USE_QUARK)
-        find_package(CHAMELEON COMPONENTS QUARK)
-    else()
-        find_package(CHAMELEON COMPONENTS STARPU MPI CUDA)
-    endif()
-    if (CHAMELEON_FOUND)
-        link_directories(${CHAMELEON_LIBRARY_DIRS_DEP})
-        include_directories(${CHAMELEON_INCLUDE_DIRS_DEP})
-    else()
-        message(FATAL_ERROR "Chameleon libraries not found in your environment."
-        "Please update your environment variables that help find it"
-        "(INCLUDE, LD_LIBRARY_PATH) or give its install directory setting CHAMELEON_DIR.")
-    endif()
-
-    # link_chameleon exe
-    add_executable(link_chameleon_c link_chameleon.c)
-    target_link_libraries(link_chameleon_c ${CHAMELEON_LIBRARIES_DEP})
-    add_executable(link_chameleon_f link_chameleon.f90)
-    target_link_libraries(link_chameleon_f ${CHAMELEON_LIBRARIES_DEP})
-else()
-    message(STATUS "CHAMELEON_DISTRIB_DIR is not set")
-    message(STATUS "Please indicate where is located your CHAMELEON distribution directory."
-    " This is necessary to find cmake_modules.")
-endif()
-
+add_executable(link_chameleon_f link_chameleon.f90)
+target_link_libraries(link_chameleon_f PRIVATE MORSE::CHAMELEON)
 ###
 ### END CMakeLists.txt
 ###
