--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -101,7 +101,9 @@ typedef struct starpu_option_request_s {
 
 #if defined(CHAMELEON_USE_MPI)
 #undef STARPU_REDUX
+#undef starpu_insert_task
 #define starpu_insert_task starpu_mpi_insert_task
+#undef starpu_mpi_codelet
 #define starpu_mpi_codelet(_codelet_) MPI_COMM_WORLD, _codelet_ TASK_SYNCHRONOUS
 #else
 #define starpu_mpi_codelet(_codelet_) _codelet_ TASK_SYNCHRONOUS
