--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -100,15 +100,25 @@ typedef struct starpu_option_request_s {
 #endif
 
 #if defined(CHAMELEON_USE_MPI)
-
 #undef STARPU_REDUX
+
+#if defined(CHAMELEON_RUNTIME_SYNC)
 #define rt_starpu_insert_task( _codelet_, ... )                         \
-    starpu_mpi_insert_task( MPI_COMM_WORLD, (_codelet_) TASK_SYNCHRONOUS, ##__VA_ARGS__ )
+    starpu_mpi_insert_task( MPI_COMM_WORLD, (_codelet_), STARPU_TASK_SYNCHRONOUS, 1, ##__VA_ARGS__ )
+#else
+#define rt_starpu_insert_task( _codelet_, ... )                         \
+    starpu_mpi_insert_task( MPI_COMM_WORLD, (_codelet_), ##__VA_ARGS__ )
+#endif
 
 #else
 
+#if defined(CHAMELEON_RUNTIME_SYNC)
 #define rt_starpu_insert_task( _codelet_, ... )                         \
-    starpu_insert_task( (_codelet_) TASK_SYNCHRONOUS, ##__VA_ARGS__ )
+    starpu_insert_task( (_codelet_), STARPU_TASK_SYNCHRONOUS, 1, ##__VA_ARGS__ )
+#else
+#define rt_starpu_insert_task( _codelet_, ... )                         \
+    starpu_insert_task( (_codelet_), ##__VA_ARGS__ )
+#endif
 
 #endif
 
