Fix starpu MPI function detection

--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -61,35 +61,37 @@ if ( STARPU_FOUND )
   if ( HAVE_STARPU_DATA_SET_OOC_FLAG )
     message("-- ${Blue}Add definition HAVE_STARPU_DATA_SET_OOC_FLAG${ColourReset}")
   endif()
-  check_function_exists(starpu_mpi_init_conf HAVE_STARPU_MPI_INIT_CONF)
-  if ( HAVE_STARPU_MPI_INIT_CONF )
-    message("-- ${Blue}Add definition HAVE_STARPU_MPI_INIT_CONF${ColourReset}")
-  endif()
-  check_function_exists(starpu_mpi_wait_for_all HAVE_STARPU_MPI_WAIT_FOR_ALL)
-  if ( HAVE_STARPU_MPI_WAIT_FOR_ALL )
-    message("-- ${Blue}Add definition HAVE_STARPU_MPI_WAIT_FOR_ALL${ColourReset}")
-  endif()
-  check_function_exists(starpu_mpi_data_migrate HAVE_STARPU_MPI_DATA_MIGRATE)
-  if ( HAVE_STARPU_MPI_DATA_MIGRATE )
-    message("-- ${Blue}Add definition HAVE_STARPU_MPI_DATA_MIGRATE${ColourReset}")
-  elseif(CHAMELEON_USE_MIGRATE)
-    set(CHAMELEON_USE_MIGRATE "OFF")
-    message("-- ${Blue}CHAMELEON_USE_MIGRATE is turned OFF because starpu_mpi_data_migrate not found${ColourReset}")
-  endif()
-  check_function_exists(starpu_mpi_interface_datatype_register HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER)
-  if ( HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER )
-    message("-- ${Blue}Add definition HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER${ColourReset}")
-  else()
-    if( CHAMELEON_USE_MPI_DATATYPES )
-      set( CHAMELEON_USE_MPI_DATATYPES OFF CACHE BOOL "Enable MPI datatypes whenever supported by the runtime" FORCE)
-    endif()
-  endif()
   check_function_exists(starpu_interface_copy2d HAVE_STARPU_INTERFACE_COPY2D)
   if ( HAVE_STARPU_INTERFACE_COPY2D )
     message("-- ${Blue}Add definition HAVE_STARPU_INTERFACE_COPY2D${ColourReset}")
   endif()
+
   if (CHAMELEON_USE_MPI)
-    # Check if a specific function exist
+    # Add MPI in case StarPU don't have a public dependency on it
+    set(CMAKE_REQUIRED_LIBRARIES "${CMAKE_REQUIRED_LIBRARIES};MPI::MPI_C")
+    check_function_exists(starpu_mpi_init_conf HAVE_STARPU_MPI_INIT_CONF)
+    if ( HAVE_STARPU_MPI_INIT_CONF )
+      message("-- ${Blue}Add definition HAVE_STARPU_MPI_INIT_CONF${ColourReset}")
+    endif()
+    check_function_exists(starpu_mpi_wait_for_all HAVE_STARPU_MPI_WAIT_FOR_ALL)
+    if ( HAVE_STARPU_MPI_WAIT_FOR_ALL )
+      message("-- ${Blue}Add definition HAVE_STARPU_MPI_WAIT_FOR_ALL${ColourReset}")
+    endif()
+    check_function_exists(starpu_mpi_data_migrate HAVE_STARPU_MPI_DATA_MIGRATE)
+    if ( HAVE_STARPU_MPI_DATA_MIGRATE )
+      message("-- ${Blue}Add definition HAVE_STARPU_MPI_DATA_MIGRATE${ColourReset}")
+    elseif(CHAMELEON_USE_MIGRATE)
+      set(CHAMELEON_USE_MIGRATE "OFF")
+      message("-- ${Blue}CHAMELEON_USE_MIGRATE is turned OFF because starpu_mpi_data_migrate not found${ColourReset}")
+    endif()
+    check_function_exists(starpu_mpi_interface_datatype_register HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER)
+    if ( HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER )
+      message("-- ${Blue}Add definition HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER${ColourReset}")
+    else()
+      if( CHAMELEON_USE_MPI_DATATYPES )
+        set( CHAMELEON_USE_MPI_DATATYPES OFF CACHE BOOL "Enable MPI datatypes whenever supported by the runtime" FORCE)
+      endif()
+    endif()
     check_function_exists(starpu_mpi_data_register_comm HAVE_STARPU_MPI_DATA_REGISTER)
     if ( HAVE_STARPU_MPI_DATA_REGISTER )
       message("-- ${Blue}Add definition HAVE_STARPU_MPI_DATA_REGISTER - Activate"
