--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -84,8 +84,11 @@ if ( STARPU_FOUND )
       set(CHAMELEON_USE_MIGRATE "OFF")
       message("-- ${Blue}CHAMELEON_USE_MIGRATE is turned OFF because starpu_mpi_data_migrate not found${ColourReset}")
     endif()
+    check_function_exists(starpu_mpi_interface_datatype_node_register HAVE_STARPU_MPI_INTERFACE_DATATYPE_NODE_REGISTER)
     check_function_exists(starpu_mpi_interface_datatype_register HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER)
-    if ( HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER )
+    if ( HAVE_STARPU_MPI_INTERFACE_DATATYPE_NODE_REGISTER )
+      message("-- ${Blue}Add definition HAVE_STARPU_MPI_INTERFACE_DATATYPE_NODE_REGISTER${ColourReset}")
+    elseif ( HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER )
       message("-- ${Blue}Add definition HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER${ColourReset}")
     else()
       if( CHAMELEON_USE_MPI_DATATYPES )
